@@ -1,3 +1,12 @@
+Tue May  2 19:18:43 2000  Jason Eckhardt  <jle@cygnus.com>
+
+        * bb-reorder.c (struct reorder_block_def): Remove members end,
+        block_begin, and block_end.
+        (REORDER_BLOCK_OLD_END): Delete.
+        (REORDER_BLOCK_BEGIN): Delete.
+        (REORDER_BLOCK_END): Delete.
+        (chain_reorder_blocks): Remove dead code.
+
 Tue May  2 17:06:53 2000  Jason Eckhardt  <jle@cygnus.com>
 
 	* bb-reorder.c (remove_scope_notes): Check for both types of scope
